crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@77.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(3.0, 70.0) &< numrange(6.6, 100.0);"
---
SelectStmt@0..51
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..49
    AExpr@7..49
      FuncCall@7..25
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "3.0"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..25
          Fconst@21..25 "70.0"
      Ascii41@25..26 ")"
      Whitespace@26..27 " "
      Op@27..29 "&<"
      Whitespace@29..30 " "
      FuncCall@30..49
        Ident@30..38 "numrange"
        Ascii40@38..39 "("
        AConst@39..42
          Fconst@39..42 "6.6"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        AConst@44..49
          Fconst@44..49 "100.0"
  Ascii41@49..50 ")"
  Ascii59@50..51 ";"

