crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select numrange(1.0, 2.0) + numrange(1.5, 3.0);"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    AExpr@7..45
      FuncCall@7..24
        Ident@7..15 "numrange"
        Ascii40@15..16 "("
        AConst@16..19
          Fconst@16..19 "1.0"
        Ascii44@19..20 ","
        Whitespace@20..21 " "
        AConst@21..24
          Fconst@21..24 "2.0"
      Ascii41@24..25 ")"
      Whitespace@25..26 " "
      Ascii43@26..27 "+"
      Whitespace@27..28 " "
      FuncCall@28..45
        Ident@28..36 "numrange"
        Ascii40@36..37 "("
        AConst@37..40
          Fconst@37..40 "1.5"
        Ascii44@40..41 ","
        Whitespace@41..42 " "
        AConst@42..45
          Fconst@42..45 "3.0"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

