crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@84.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select range_merge(numrange(1.0, 2.0), numrange(1.5, 3.0));"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..18 "range_merge"
      Ascii40@18..19 "("
      FuncCall@19..36
        Ident@19..27 "numrange"
        Ascii40@27..28 "("
        AConst@28..31
          Fconst@28..31 "1.0"
        Ascii44@31..32 ","
        Whitespace@32..33 " "
        AConst@33..36
          Fconst@33..36 "2.0"
      Ascii41@36..37 ")"
      Ascii44@37..38 ","
      Whitespace@38..39 " "
      FuncCall@39..56
        Ident@39..47 "numrange"
        Ascii40@47..48 "("
        AConst@48..51
          Fconst@48..51 "1.5"
        Ascii44@51..52 ","
        Whitespace@52..53 " "
        AConst@53..56
          Fconst@53..56 "3.0"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

